test-cases/negative/test_001_incomplete_throw.lay
# negative test: incomplete throw statement
# expected: error should be thrown during parsing or compilation

throw


